# lightcodepedia

./: .gitignore  DEPLOY_LIGHTCODEPEDIA_STREAMLIT.md  README.md  licence.md  lightcode.py  main.py  print2st.py  pyproject.toml  requirements.runtime.txt  requirements.txt  testing_html.html
.streamlit/: config.toml
config/: settings.py
docs/: CNAME  _config.yml  about.md  academy.md  author.md  chapter2.md  chapters.md  copyright.md  deploy.md  diagram  diagram.md  help.md  index.html  index.md  links.md  nodes.md  play.md  python.md
docs/_includes/: doc.md  example.md  example_old.md  gdrive_pdf.md
docs/_includes/pdfs/: readme.md
docs/_layouts/: default.html
docs/modules/: ex1.yaml  index.html  menu.yaml
docs/pdfs/: readme.md
modules/: _dog_ui.yaml  beverages.yaml  blocks.yaml  charts.yaml  designers.yaml  dogs.yaml  dogs_to_mod2.yaml  drinks.yaml  fun.yaml  hello.yaml  hello1.yaml  inspectors.yaml  katas.yaml  kore.yaml  menu1.yaml  mod2.py  new_module.yaml  patterns.yaml  people.yaml  pets.yaml  qr.yaml  quiz_chapter2.yaml  repository.yaml  specs.yaml  swift_sip.yaml  tef_irn.yaml  tutorial101.yaml  tutorials.yaml  users.yaml  welcome.yaml
pages/: _about.py  _play.py
usecases/common/: common.py
usecases/common/backend/: env_manager.py  file_access.py  module_importer.py  module_loader.py  module_wrapper.py  services.py  tracing.py  user_manager.py  user_state.py
usecases/common/view/: about_box.py
usecases/module_manager/backend/: module_decorator.py  module_dumper.py
